[metadata]
name = detimer
version = 0.2.1
url = https://github.com/clabe45/detimer
description = Simple backup management CLI
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = detimer
install_requires =
    pyyaml
    click

[options.entry_points]
console_scripts =
    detimer = detimer.cli:cli

[options.package_data]
detimer = data/*.yml
